@@ -3,6 +3,7 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="ftw.task">
 
     <five:registerPackage package="." initialize=".initialize" />
@@ -14,6 +15,11 @@
     <include package=".browser" />
     <include package=".content" />
     <include package=".portlets" />
+
+    <configure zcml:condition="installed ftw.pdfgenerator">
+        <include package="ftw.pdfgenerator" />
+        <include package=".latex" />
+    </configure>
 
     <!-- Register the installation GenericSetup extension profile -->
     <genericsetup:registerProfile
