@@ -1,0 +1,11 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
+    i18n_domain="ftw.task">
+
+    <adapter zcml:condition="installed ftw.workspace"
+             factory=".workspace.TasksListing"
+             provides="ftw.workspace.interfaces.IWorkspaceDetailsListingProvider"
+             name="tasks-listing" />
+
+</configure>
