@@ -1,0 +1,48 @@
+<html
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:tal="http://xml.zope.org/namespaces/tal"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    tal:omit-tag="python: True"
+    i18n:domain="ftw.task">
+
+    <table>
+        <colgroup>
+            <col width="15%" />
+            <col width="20%" />
+            <col width="35%" />
+            <col width="30%" />
+        </colgroup>
+        <thead>
+            <tr>
+                <th class="border-bottom">
+                    <b i18n:translate="latex_tasks_date">Date</b>
+                </th>
+                <th class="border-bottom">
+                    <b i18n:translate="latex_tasks_state">State</b>
+                </th>
+                <th class="border-bottom">
+                    <b i18n:translate="latex_tasks_title">Title</b>
+                </th>
+                <th class="border-bottom">
+                    <b i18n:translate="latex_tasks_responsibility">
+                        Responsibility
+                    </b>
+                </th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr tal:repeat="item view/get_items">
+                <td tal:content="item/end"
+                    class="border-bottom" />
+                <td tal:content="item/state"
+                    class="border-bottom" />
+                <td tal:content="item/title"
+                    class="border-bottom" />
+                <td tal:content="item/responsibility"
+                    class="border-bottom" />
+            </tr>
+        </tbody>
+    </table>
+
+</html>
