@@ -5,7 +5,8 @@ Changelog
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add tasks listing for ftw.workspace details PDF.
+  [jone]
 
 
 2.3.1 (2012-03-05)
